--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 example_2_314/Rplots.pdf
+example_29/
